big refactor and started implementing semantic validation